--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -1,5 +1,5 @@
 @article{amundsen1994piscivory,
-  title={Piscivory and cannibalism in Arctic charr},
+  title={Piscivory and cannibalism in {A}rctic charr},
   author={Amundsen, P-A},
   journal={Journal of Fish Biology},
   volume={45},
@@ -10,7 +10,7 @@
 
 @article{bartrons2015spatial,
   title={Spatial patterns reveal strong abiotic and biotic drivers 
-          of zooplankton community composition in Lake M{\`y}vatn, Iceland},
+          of zooplankton community composition in {L}ake {M}\'{y}vatn, {I}celand},
   author={Bartrons, Mireia and Einarsson, Arni and Nobre, Regina LG and Herren, Cristina M 
             and Webert, Kyle C and Brucet, Sandra 
               and {\'O}lafsd{\'o}ttir, S{\'o}lveig R and Ives, Anthony R},
@@ -25,16 +25,16 @@
 @incollection{beamish1999taking,
   title={Taking the next step in fisheries management},
   author={Beamish, Richard J and Mahnken, Conrad},
-  booktitle={Ecosystem Approaches for Fisheries Management.},
+  booktitle={Ecosystem {A}pproaches for {F}isheries {M}anagement.},
   publisher={University of Alaska Sea Grant, AK-SG-99-01, Fairbanks},
   pages={1--21},
   year={1999}
 }
 
 @article{bjornsson2004climate,
-  title={Climate and climatic variability at Lake M\'{y}vatn},
+  title={Climate and climatic variability at {L}ake {M}\'{y}vatn},
   author={Bj\"{o}rnsson, Halld\'{o}r and J\'{o}nsson, Trausti},
-  journal={Aquatic Ecology},
+  journal={Aquatic {E}cology},
   volume={38},
   number={2},
   pages={129--144},
@@ -47,20 +47,22 @@
 author={Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D and Lee,
     Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker,
     Marcus and Guo, Jiqiang and Li, Peter and Riddell, Allen},
-title={Stan: A probabilistic programming language},
-journal={Journal of Statistical Software},
+title={Stan: {A} probabilistic programming language},
+journal={Journal of {S}tatistical {S}oftware},
 volume={76},
 number={1},
 year={2017},
 publisher={Columbia Univ., New York, NY (United States); Harvard Univ., Cambridge, MA~…}
 }
 
-@article{caswell2001matrix,
-  title={Matrix Population Models: Construction, Analysis, and Interpretation. 2nd edn Sinauer Associates},
+@book{caswell2001matrix,
+  title={Matrix {P}opulation {M}odels: {C}onstruction, {A}nalysis, 
+          and {I}nterpretation. 2nd edn},
   author={Caswell, Hal},
-  journal={Inc., Sunderland, MA},
+  publisher = {Sinauer Associates},
   year={2001}
 }
+
 
 @article{dixon1999episodic,
   title={Episodic fluctuations in larval supply},
@@ -74,9 +76,9 @@ publisher={Columbia Univ., New York, NY (United States); Harvard Univ., Cambridg
 }
 
 @article{einarsson2004clad,
-title={Long-term changes in benthic {C}ladocera populations in Lake {M}\'{y}vatn, {I}celand},
+title={Long-term changes in benthic {C}ladocera populations in {L}ake {M}\'{y}vatn, {I}celand},
 author={Einarsson, \'{A}rni and \"{O}rn\'{o}lfsd\'{o}ttir, Erla Bj\"{o}rk},
-journal={Aquatic Ecology},
+journal={Aquatic {E}cology},
 volume={38},
 number={2},
 pages={253--262},
@@ -85,14 +87,14 @@ publisher={Springer}
 }
 
 @article{einarsson2004myvatn,
-title={The ecology of Lake {M}\'{y}vatn and the {R}iver {L}ax\'{a}: variation in space and time},
+title={The ecology of {L}ake {M}\'{y}vatn and the {R}iver {L}ax\'{a}: variation in space and time},
 author={Einarsson, \'{A}rni and Stef\'{a}nsd\'{o}ttir, Ger{\dh}ur
         and J\'{o}hannesson, Helgi and Olafsson, J\'{o}n S
         and G{\'\i}slason, G{\'\i}sli M{\'a}r
         and Wakana, Isamu and
         Gud{\dh}ergsson, Gu{\dh}ni
         and Gardarsson, Arnthor},
-journal={Aquatic Ecology},
+journal={Aquatic {E}cology},
 volume={38},
 number={2},
 pages={317--348},
@@ -101,10 +103,11 @@ publisher={Springer}
 }
 
 @article{elliott2010temperature,
-  title={Temperature requirements of Atlantic salmon Salmo salar, brown trout Salmo trutta 
-          and Arctic charr Salvelinus alpinus: predicting the effects of climate change},
+  title={Temperature requirements of Atlantic salmon \textit{Salmo salar}, 
+            brown trout \textit{Salmo trutta} and Arctic charr 
+              \textit{Salvelinus alpinus}: predicting the effects of climate change},
   author={Elliott, JM and Elliott, JA},
-  journal={Journal of fish biology},
+  journal={Journal of {F}ish {B}iology},
   volume={77},
   number={8},
   pages={1793--1817},
@@ -113,10 +116,10 @@ publisher={Springer}
 }
 
 @article{forcada2008life,
-  title={Life history buffering in Antarctic mammals and 
+  title={Life history buffering in {A}ntarctic mammals and 
           birds against changing patterns of climate and environmental variation},
   author={Forcada, Jaume and Trathan, Philip N and Murphy, Eugene J},
-  journal={Global Change Biology},
+  journal={Global {C}hange {B}iology},
   volume={14},
   number={11},
   pages={2473--2488},
@@ -129,12 +132,30 @@ title={Population fluctuations of chironomid and simuliid {D}iptera at {M}\'{y}v
 author={Gardarsson, Arnthor and Einarsson, \'{A}rni and 
   G\'{i}slason, G\'{i}sli M\'{a}r and Hrafnsd{\'o}ttir, Th{\'o}ora and 
     Ingvason, Haraldur R and J\'{o}nsson, Erlendur and Olafsson, J\'{o}n S},
-journal={Aquatic Ecology},
+journal={Aquatic {E}cology},
 volume={38},
 number={2},
 pages={209--217},
 year={2004},
 publisher={Springer}
+}
+
+@article{gerdeaux2011does,
+  title={Does global warming threaten the dynamics of {A}rctic charr in {L}ake {G}eneva?},
+  author={Gerdeaux, Daniel},
+  journal={Hydrobiologia},
+  volume={660},
+  number={1},
+  pages={69--78},
+  year={2011},
+  publisher={Springer}
+}
+
+@techreport{gudbergsson1991,
+  title       = {{S}ilungsranns{\'o}knir {\'i} {M}\'{y}vatni 1986--1990},
+  author      = {Gu{\dh}bergsson, Gu{\dh}ni},
+  institution = {{I}nstitute of {F}reshwater {F}isheries ({I}celand)},
+  year        = {1991}
 }
 
 @article{gross2005estimating,
@@ -153,7 +174,7 @@ publisher={Springer}
 title={Arctic charr in {L}ake {M}\'{y}vatn: 
   the centennial catch record in the light of recent stock estimates},
 author={Gu{\dh}bergsson, Gu{\dh}ni},
-journal={Aquatic Ecology},
+journal={Aquatic {E}cology},
 volume={38},
 number={2},
 pages={271--285},
@@ -178,7 +199,7 @@ publisher={Springer}
 title = {{demogR}: A package for the construction and analysis of
   age-structured demographic models in {R}},
 author = {James Holland Jones},
-journal = {Journal of Statistical Software},
+journal = {Journal of {S}tatistical {S}oftware},
 year = {2007},
 volume = {22},
 number = {10},
@@ -189,7 +210,7 @@ url = {http://dx.doi.org/10.18637/jss.v022.i10},
 @article{houde2008emerging,
   title={Emerging from Hjort's shadow},
   author={Houde, Edward D},
-  journal={Journal of Northwest Atlantic Fishery Science},
+  journal={Journal of {N}orthwest {A}tlantic {F}ishery {S}cience},
   volume={41},
   year={2008},
   publisher={Northwest Atlantic Fisheries Org}
@@ -212,7 +233,7 @@ url = {http://dx.doi.org/10.18637/jss.v022.i10},
   title={Fishing effects on age and spatial structures undermine population stability of fishes},
   author={Hsieh, Chih-hao and Yamauchi, Atsushi and Nakazawa, Takefumi 
           and Wang, Wei-Fen},
-  journal={Aquatic Sciences},
+  journal={Aquatic {S}ciences},
   volume={72},
   number={2},
   pages={165--178},
@@ -234,8 +255,9 @@ url = {http://dx.doi.org/10.18637/jss.v022.i10},
 
 
 @article{jeppesen2001fish,
-  title={Fish and crustaceans in northeast Greenland lakes 
-          with special emphasis on interactions between Arctic charr (Salvelinus alpinus), Lepidurus arcticus and benthic chydorids},
+  title={Fish and crustaceans in northeast {G}reenland {l}akes 
+          with special emphasis on interactions between Arctic charr 
+          (\textit{Salvelinus alpinus}), \textit{Lepidurus arcticus} and benthic chydorids},
   author={Jeppesen, Erik and Christoffersen, Kirsten and Landkildehus, Frank 
           and Lauridsen, Torben and Amsinck, Susanne L and Riget, Frank 
             and S{\o}ndergaard, Martin},
@@ -251,7 +273,7 @@ url = {http://dx.doi.org/10.18637/jss.v022.i10},
 @article{jonsson2015freshwater,
   title={A freshwater predator hit twice by the effects of warming across trophic levels},
   author={Jonsson, Tomas and Setzer, Malin},
-  journal={Nature Communications},
+  journal={Nature {C}ommunications},
   volume={6},
   number={1},
   pages={1--9},
@@ -261,12 +283,12 @@ url = {http://dx.doi.org/10.18637/jss.v022.i10},
 
 
 @article{klemetsen2003atlantic,
-title={Atlantic salmon \emph{{S}almo salar} {L.}, brown trout \emph{{S}almo trutta} {L.} 
-        and Arctic charr \emph{{S}alvelinus alpinus} {L.}: 
+title={Atlantic salmon \textit{{S}almo salar} {L.}, brown trout \textit{{S}almo trutta} {L.} 
+        and Arctic charr \textit{{S}alvelinus alpinus} {L.}: 
           a review of aspects of their life histories},
 author={Klemetsen, A and Amundsen, P-A and Dempson, JB and Jonsson, B 
           and Jonsson, N and O'connell, MF and Mortensen, E},
-journal={Ecology of freshwater fish},
+journal={Ecology of {F}reshwater {F}ish},
 volume={12},
 number={1},
 pages={1--59},
@@ -278,7 +300,7 @@ publisher={Wiley Online Library}
   title={A life-history perspective on the demographic drivers of 
           structured population dynamics in changing environments},
   author={Koons, David N and Iles, David T and Schaub, Michael and Caswell, Hal},
-  journal={Ecology letters},
+  journal={Ecology {L}etters},
   volume={19},
   number={9},
   pages={1023--1031},
@@ -302,7 +324,7 @@ publisher={Wiley Online Library}
   title={Physical--biological coupling and the challenge of 
     understanding fish recruitment in freshwater lakes},
   author={Ludsin, Stuart A and DeVanna, Kristen M and Smith, Ralph EH},
-  journal={Canadian Journal of Fisheries and Aquatic Sciences},
+  journal={Canadian {J}ournal of {F}isheries and {A}quatic {S}ciences},
   volume={71},
   number={5},
   pages={775--794},
@@ -311,11 +333,11 @@ publisher={Wiley Online Library}
 }
 
 @article{malmquist2009salmonid,
-  title={Salmonid fish and warming of shallow Lake Elli{\dh}avatn in Southwest Iceland},
+  title={Salmonid fish and warming of shallow {L}ake {E}lli{\dh}avatn in {S}outhwest {I}celand},
   author={Malmquist, HJ and Antonsson, {\TH} and Ingvason, HR and Ingimarsson, F 
             and Arnason, F},
-  journal={Internationale Vereinigung f{\"u}r theoretische 
-            und angewandte Limnologie: Verhandlungen},
+  journal={Internationale {V}ereinigung f{\"u}r theoretische 
+            und angewandte {L}imnologie: {V}erhandlungen},
   volume={30},
   number={7},
   pages={1127--1132},
@@ -323,10 +345,24 @@ publisher={Wiley Online Library}
   publisher={Taylor \& Francis}
 }
 
+@article{mccormick2021shifts,
+  title={Shifts in the partitioning of benthic and pelagic primary production within 
+          and across summers in {L}ake {M}{\`y}vatn, {I}celand},
+  author={McCormick, Amanda R and Phillips, Joseph S and 
+            Botsch, Jamieson C and Ives, Anthony R},
+  journal={Inland Waters},
+  volume={11},
+  number={1},
+  pages={13--28},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
+
+
 @article{nielsen2014estimation,
   title={Estimation of time-varying selectivity in stock assessments using state-space models},
   author={Nielsen, Anders and Berg, Casper W},
-  journal={Fisheries Research},
+  journal={Fisheries {R}esearch},
   volume={158},
   pages={96--101},
   year={2014},
@@ -334,19 +370,28 @@ publisher={Wiley Online Library}
 }
 
 @manual{pinheiro2020nlme,
-title = {{nlme}: Linear and Nonlinear Mixed Effects Models},
+title = {\texttt{nlme}: {L}inear and {N}onlinear {M}ixed {E}ffects {M}odels},
 author = {Jose Pinheiro and Douglas Bates and Saikat DebRoy and
   Deepayan Sarkar and {R Core Team}},
 year = {2020},
-note = {R package version 3.1-151},
 url = {https://CRAN.R-project.org/package=nlme},
   }
-
+  
+@article{phillips2020time,
+  title={Time-varying responses of lake metabolism to light and temperature},
+  author={Phillips, Joseph S},
+  journal={Limnology and {O}ceanography},
+  volume={65},
+  number={3},
+  pages={652--666},
+  year={2020},
+  publisher={Wiley Online Library}
+}
 
 @manual{r2020,
-    title = {{R}: A Language and Environment for Statistical Computing},
+    title = {{R}: {A} {L}anguage and {E}nvironment for {S}tatistical {C}omputing},
     author = {{R Core Team}},
-    organization = {R Foundation for Statistical Computing},
+    organization = {R {F}oundation for {S}tatistical {C}omputing},
     address = {Vienna, Austria},
     year = {2020},
     url = {https://www.R-project.org/},
@@ -354,7 +399,7 @@ url = {https://CRAN.R-project.org/package=nlme},
   
 @article{snorrason1992population,
   title={Population dynamics of the planktivorous 
-          arctic charr Salvelinus alpinus (" murta") in Thingvallavatn},
+          {A}rctic charr \textit{Salvelinus alpinus} (" murta") in {T}hingvallavatn},
   author={Snorrason, Sigurdur S and J{\'o}nasson, P{\'e}tur M and Jonsson, Bror 
           and Lindem, Torfinn and Malmquist, Hilmar J and Sandlund, Odd Terje 
             and Sk{\'u}lason, Sk{\'u}li},
@@ -366,17 +411,30 @@ url = {https://CRAN.R-project.org/package=nlme},
   
 @misc{stan2020rstan,
     title = {{RStan}: the {R} interface to {Stan}},
-    author = {{Stan Development Team}},
+    author = {{Stan {D}evelopment {T}eam}},
     note = {R package version 2.21.2},
     year = {2020},
     url = {http://mc-stan.org/},
   }
   
+@article{svenning2021temporal,
+  title={Temporal changes in the relative abundance of 
+          anadromous {A}rctic charr, brown trout, and {A}tlantic salmon in northern {E}urope: 
+            Do they reflect changing climates?},
+  author={Svenning, Martin-A and Falkeg{\aa}rd, Morten and Dempson, J Brian and 
+          Power, Michael and B{\aa}rdsen, B{\aa}rd-J{\o}rgen 
+            and Gu{\dh}bergsson, Gudni and Fauchald, Per},
+  journal={Freshwater {B}iology},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+  
 @article{twombly1994comparative,
   title={Comparative demography and population dynamics of 
-          two coexisting copepods in a Venezuelan floodplain lake},
+          two coexisting copepods in a {V}enezuelan floodplain lake},
   author={Twombly, Saran},
-  journal={Limnology and Oceanography},
+  journal={Limnology and {O}ceanography},
   volume={39},
   number={2},
   pages={234--247},
@@ -387,7 +445,7 @@ url = {https://CRAN.R-project.org/package=nlme},
 @article{white2007irruptive,
   title={Irruptive population dynamics in Yellowstone pronghorn},
   author={White, PJ and Bruggeman, Jason E and Garrott, Robert A},
-  journal={Ecological Applications},
+  journal={Ecological {A}pplications},
   volume={17},
   number={6},
   pages={1598--1606},
@@ -396,9 +454,9 @@ url = {https://CRAN.R-project.org/package=nlme},
 }
   
 @article{winfield2008arctic,
-  title={The Arctic charr (Salvelinus alpinus) populations of Windermere, UK: 
+  title={The Arctic charr (\textit{Salvelinus alpinus}) populations of {W}indermere, {UK}: 
           population trends associated with eutrophication, climate change 
-            and increased abundance of roach (Rutilus rutilus)},
+            and increased abundance of roach (\textit{Rutilus rutilus})},
   author={Winfield, Ian J and Fletcher, Janice M and James, J Ben},
   journal={Environmental Biology of Fishes},
   volume={83},
