--- a/manuscript/charr_ms.tex
+++ b/manuscript/charr_ms.tex
@@ -55,12 +55,12 @@ Anthony R. Ives$^{2}$
 
 
 \noindent{} 1. Department of Aquaculture and Fish Biology, 
-H\'{o}lar University, Skagafj\"{o}r{\dh}ur 551 Iceland
+H\'{o}lar University, Skagafj\"{o}r{\dh}ur, Iceland
 
 \noindent{} 2. Department of Integrative Biology, 
-University of Wisconsin, Madison, Wisconsin 53706 USA
+University of Wisconsin, Madison, Wisconsin, USA
 
-\noindent{} 3. Marine and Freshwater Research Institute, Reykjav\'{i}k Iceland
+\noindent{} 3. Marine and Freshwater Research Institute, Hafnafj\"{o}r{\dh}ur, Iceland
 
 \noindent{} $\dagger$ E-mail: joseph@holar.is
 
@@ -70,7 +70,10 @@ University of Wisconsin, Madison, Wisconsin 53706 USA
 
 Running head: {Arctic charr demography}
 
-\linenumbers{}
+\textit{Keywords}: {demography; 
+                    Lake M\'{y}vatn; 
+                    population dynamics; 
+                    \emph{Salvelinus alpinus}}
 
 \clearpage
 
@@ -84,28 +87,40 @@ Running head: {Arctic charr demography}
 % ---------------------------------------------------------------------------------------
 % ---------------------------------------------------------------------------------------
 
+\linenumbers{}
+
 \section*{Abstract} \label{abstract}
 
+\begin{enumerate}[label=\arabic*.]
+\item
 Quantifying temporal variation in demographic rates is a central goal of population ecology
 in both basic and applied settings.
+
+\item
 In this study, we analyzed a multidecadal age-structured time series 
-of Arctic charr (\emph{Salvelinus alpinus}) catch  in Lake M\'{y}vatn, Iceland, 
+of Arctic charr (\emph{Salvelinus alpinus}) abundance  in Lake M\'{y}vatn, Iceland, 
 to infer the time-varying demographic response of the population 
 to reduced harvest in the wake of the fishery's collapse.
+
+\item
 Our analysis shows that while survival probability of adults increased following the alleviation
 of harvesting pressure, 
-per recruitment consistently declined over most of the study period,
+per capita recruitment consistently declined over most of the study period,
 until the final three years when it began to increase.
 The countervailing demographic trends resulted 
-in limited directional change in the total population size and population growth rate.
+in only limited directional change in the total population size and population growth rate.
 Rather, the population dynamics were dominated by large interannual variability
 and a shift towards an older age distribution.
-These results are indicative of a slow recovery of the population following its collapse,
-despite the rising number of adults due to relaxed harvest.
+
+\item
+Our results are indicative of a slow recovery of the population after its collapse,
+despite the rising number of adults following relaxed harvest.
+This underscores the potential for heterogeneous demographic responses to management efforts
+due to the complex ecological context in which such efforts take place.
+
+\end{enumerate}
 
 \bigskip
-
-\textit{Keywords}: {demography; Lake M\'{y}vatn; population dynamics; \emph{Salvelinus alpinus}}
 
 \clearpage
 
@@ -140,7 +155,7 @@ particularly for populations that have not been the subjects
 of intensive mark-recapture-style campaigns.
 
 In this study, we analyzed a multidecadal age-structured time series 
-of Arctic charr (\emph{Salvelinus alpinus}) catch  in Lake M\'{y}vatn, Iceland, 
+of Arctic charr (\emph{Salvelinus alpinus}) abundance in Lake M\'{y}vatn, Iceland, 
 to infer the time-varying demographic response of the population 
 to reduced harvest in the wake of the fishery's collapse.
 Arctic charr are salmonids with a circumpolar distribution
@@ -152,16 +167,22 @@ and boreal freshwater food webs owing to their roles as top consumers
 \citep{jeppesen2001fish, klemetsen2003atlantic}.
 In M\'{y}vatn, the charr sustained a large commercial fishery throughout much of the 
 twentieth century that was subject to exploitation rates upwards of 80\%,
-associated in the fishery's collapse by the late 1980s \citep{gudbergsson2004}.
+proceeding the fishery's collapse by the late 1980s \citep{gudbergsson2004}.
+This collapse led to catch restrictions imposed in the early 2000s.
 A portion of the lake was also dredged during this period,
-which may have contributed the decline of the fishery \citep{einarsson2004myvatn}.
-A monitoring program was instituted in 1986 to monitor the population's
-response to declining harvesting pressure,
-including catch restrictions imposed in the early 2000s.
+which may have indirectly contributed to the decline of the fishery
+through depressed prey availability \citep{einarsson2004myvatn}.
+A monitoring program was instituted in 1986 to track the population's
+dynamics in the wake of these ecological perturbations.
+This monitoring was conducted by one of the authors (GG) 
+using the same methods and sampling locations within the lake 
+for the entire time series,
+providing a valuable opportunity to quantify 
+long-term demographic changes in the population.
 
 Using these monitoring data, 
-we parameterized an age-structured demographic model with time-varying recruitment and survival 
-to characterize the dynamics of the population.
+we parameterized an age-structured demographic model with time-varying recruitment 
+and survival to characterize the dynamics of the population.
 We modeled temporal variation in the demographic rates as random walks, 
 an approach that had previously been applied 
 to infer population growth rates from non-structured abundance 
@@ -171,13 +192,15 @@ and for age-specific mortality rates inferred from fisheries stock assessments
 This method takes advantage of the entire time series for estimating the parameters 
 while allowing them to vary smoothly through time. 
 Furthermore, the model is able to characterize a range of dynamics including those
-arising from negative density-dependence and environmental perturbations.
+arising from negative density-dependence and environmental perturbations
+\citep{ives2012detecting}.
 The latter may be particularly important in the case of the M\'{y}vatn's charr,
-because the lake is subject to large fluctuations in primary and secondary production
-that may cascade up to the charr population 
-\citep{einarsson2004myvatn, einarsson2004clad, gardarsson2004population}.
+because the lake is subject to large fluctuations 
+in primary \citep{phillips2020time, mccormick2021shifts} 
+and secondary \citep{einarsson2004clad, gardarsson2004population}
+production that may cascade up to the charr population.
 Accordingly, the purpose of our analysis is to 
-(i) characterize interannual variability in survival recruitment 
+(i) characterize interannual variability in survival and recruitment 
 in M\'{y}vatn's charr population, 
 and (ii) determine whether directional trends in these demographic rates have
 resulted in the recovery of the population in the wake of its collapse. 
@@ -202,8 +225,8 @@ resulted in the recovery of the population in the wake of its collapse.
 M\'{y}vatn is located in northeastern Iceland (65°40’N 17°00’W) 
 and has a tundra-subarctic climate \citep{bjornsson2004climate, einarsson2004myvatn}. 
 The lake spans $37 \text{km}^2$, 
-divided into north (``Ytrifloi''; $8 \text{km}^2$) 
-and south (``Sy{\dh}rifloi''; $29 \text{km}^2$) basins 
+divided into north (Ytrifloi; $8 \text{km}^2$) 
+and south (Sy{\dh}rifloi; $29 \text{km}^2$) basins 
 connected by a narrow channel \citep{einarsson2004myvatn}. 
 M\'{y}vatn is shallow (south basin mean depth = 2.3m) and 
 fed by nutrient-rich springs that sustain high benthic primary and secondary production.
@@ -213,57 +236,65 @@ The benthic invertebrates are in turn
 an important food source for M\'{y}vatn’s vertebrate populations, 
 including Arctic charr, threespine stickleback (\emph{Gasterosteus aculeatus}), 
 brown trout (\emph{Salmo trutta}), and waterfowl \citep{einarsson2004myvatn}. 
-The north basin was historically dredged, 
+The north basin was historically dredged (1967--2003), 
 which likely affected many populations in the lake, 
 although such effects are poorly understood \citep{einarsson2004myvatn}.
 
 While some Arctic charr populations are anadromous, 
 M\'{y}vatn’s population appears to reside strictly within the lake; 
 there is major outflow that connects the lake to the Greenland Sea,
-but natural barriers likely prevent individuals from entering the lake from downriver
+but natural barriers prevent individuals from entering the lake from downriver
 \citep{gudbergsson2004}. 
 There are two charr morphs within M\'{y}vatn: pelagic (size at maturation of 35--50cm) 
-and small benthic (20--25cm). However, the small benthic morph is restricted to a small 
-and relatively isolated part of the south basin \citep{gudbergsson2004}; 
+and small benthic (20--25cm). 
+However, the small benthic morph is restricted to a small 
+and relatively isolated part of the south basin fed by cold springs 
+\citep{gudbergsson2004}; 
 therefore, the pelagic morph is the focus of this study. 
 Gut content data reveal a diverse diet, including midges, snails, clams, zooplankton, 
-benthic crustaceans, and sticklebacks. 
+benthic crustaceans, and sticklebacks as the main prey species. 
 The large-bodied cladoceran \emph{Eurycercus lamellatus} 
 is thought to be a particularly important prey item 
 \citep{gudbergsson2004}. 
 Some charr populations are cannibalistic \citep{klemetsen2003atlantic}, 
 especially in the absence of other large-bodied prey (e.g., fish).
 However, the charr in M\'{y}vatn appear to lack cannibalism based on gut content data
-\citep{gudbergsson2004}, although this is difficult to assess definitely. 
+\citep{gudbergsson2004}. 
 
 % ---------------------------------------------------------------------------------------
-\subsection*{Data} 
+\subsection*{Study design} 
 % ---------------------------------------------------------------------------------------
 
 Systematic surveys of M\'{y}vatn’s Arctic charr have been conducted 
-with gill nets every year from 1986-2020 by a single researcher (G. Gu{\dh}bergsson) 
+with monofilament gill nets every year from 1986--2020 by a single researcher (GG) 
 using a consistent methodology. 
+A series of mesh sizes (16.5, 18.5, 21.5, 25, 30, 35, 40, 46, and 50mm) 
+was used to capture individuals over a large size range;
+smaller nets to target young-of-the-year were not used to avoid stickleback by-catch.
 The surveys largely took place after the period of most dramatic population decline 
 \citep{gudbergsson2004} 
 and were intended to monitor the recovery of the population following its collapse. 
-Eleven survey stations were sampled from around the lake,
-most of which were located in the south basin. 
+Twelve survey stations were sampled from around the lake,
+ten of which were located in the south basin;
+two of the south basin stations were aggregated for the purpose this analysis
+due to their close proximity to each other. 
 Captured individuals were aged either by otoliths directly or 
-with an estimate based on length.
+with estimates based on length.
 The surveys were conducted in fall (late August through September) 
-of every year just before spawning and in June in a subset of years. 
+of every year before spawning and also in June in a subset of years. 
 For this analysis we used only the August/September data. 
 Therefore, in our age classifications an individual of age ``x'' is an individual 
-that survived to that age (e.g., an ``age 1'' individual was born in the previous fall). 
+that survived to that age (e.g., an ``age 1'' individual hatched in the previous fall). 
 The oldest individuals in the data set were 12 years old, although observations 
 of individuals older than 6 years are sparse
-(Figure \ref{fig:p_cohort}). 
-In M\'{y}vatn, charr reach maturity at 4-5 years of age, 
+(Supporting Information: Figure S1). 
+In M\'{y}vatn, charr reach maturity at 4--5 years of age and 
+typically spawn multiple times after maturity, 
 and therefore we grouped the older individuals into a single reproductive age class
 denoted ``age 4+''.
 
 % ---------------------------------------------------------------------------------------
-\subsection*{Statistical analysis} 
+\subsection*{Data analysis} 
 % ---------------------------------------------------------------------------------------
 
 We characterized the demography of the charr population 
@@ -277,8 +308,7 @@ The model projected the dynamics from one time step to the next as
 \end{equation}
 %
 where $\mathbf{P}_{t}$ is a demographic projection matrix,
-and $\mathbf{x}_t$ is an age-structured vector of scaled population densities 
-(see description of scaling below) at time $t$.
+and $\mathbf{x}_t$ is an age-structured vector of population densities at time $t$.
 %
 The projection matrix was defined as
 %
@@ -304,7 +334,8 @@ that the values remained positive:
 %
 \begin{equation} \label{eq:rho}
 \begin{aligned}
-\text{log}\left(\rho_t\right) &= \text{log}\left(\rho_{t - 1}\right) + \epsilon_{\rho,t} \\
+\rho_t &= \text{exp}\left(\chi_t\right) \\
+\chi_t &= \chi_{t-1} + \epsilon_{\rho,t} \\
 \epsilon_{\rho,t} &\sim \text{Gaussian}\left(0, \sigma_{\rho} \right)
 \end{aligned}
 \end{equation}
@@ -313,22 +344,22 @@ where $\epsilon_{\rho,t}$ is the random walk step at time $t$.
 The steps of the random walk followed a Gaussian distribution with mean of 0 
 and standard deviation (SD) of $\epsilon_{\rho,t}$.
 Temporal variation in survival probability for age class $i$ was modeled analogously 
-on a logit-scale:
+on a logit scale:
 %
 \begin{equation} \label{eq:phi}
 \begin{aligned}
-\text{logit}\left(\phi_{i, t}\right) &= \text{logit}\left(\phi_{i, t - 1}\right) +
-                                          \epsilon_{\phi,i,t} \\
+\phi_{i, t} &= \text{logit}^{-1}\left(\gamma_{i, t}\right) \\
+\gamma_{i, t} &= \gamma_{i, t - 1} + \epsilon_{\phi,i,t} \\
 \epsilon_{\phi,i,t} &\sim \text{Gaussian}\left(0, \sigma_{\phi} \right)\text{.}
 \end{aligned}
 \end{equation}
 %
 with the same random walk SD used for all age classes 
 to reduce the number of parameters fit by the model.
-Note that the ``random walks''  were constrained by the data during model fitting,
-and therefore were not necessarily non-stationary.
-Rather, they provided a convenient means 
-of allowing the parameters to vary smoothly through time.
+Note that the ``random walks'' were constrained by the data during model fitting,
+providing a convenient means of allowing the parameters to vary smoothly through time
+in accordance with the data
+\citep{zeng1998, ives2012detecting}.
 The random walk SDs for recruitment and survival 
 characterize the degree of temporal variation in the respective processes. 
 
@@ -339,48 +370,44 @@ We fit the model in a Bayesian framework with a zero-inflated Poisson likelihood
 \displaystyle\prod_{s}
 \displaystyle\prod_{i}
 \displaystyle\prod_{t}
-\[ \begin{cases} 
+\begin{cases} 
       \theta + (1-\theta) \times \text{Poisson}
         \left(
-            0~|~\kappa_i~\times~s~\times~x_{i,t}
+            0~|~\kappa_i~\times~x_{i,t}
         \right) & \text{if}~y_{s,i,t} = 0 \\
       (1-\theta) \times \text{Poisson}
         \left(
-            y_{s,i,t}~|~\kappa_i~\times~s~\times~x_{i,t}
+            y_{s,i,t}~|~\kappa_i~\times~x_{i,t}
         \right) & \text{if}~y_{s,i,t} > 0
    \end{cases}
-\]
 \end{equation}
 %
 where $y_{s,i,t}$ is the annual survey catch for station $s$ and age class $i$,
-$\kappa_i$ is the age-specific sampling efficiency (constrained between 0 and 1),
-$\theta$ is the probability of zero catch from a Bernoulli sampling processes
-(``zero-inflation rate''), 
-and $s=100$ is a scaling factor introduced to improve computationally efficiency
-by preventing excessively large values of $x_{i,t}$ 
-(such that $x_{i,t}$ itself is the population density scaled by $1/s$).
+$\kappa_i$ is the age-specific sampling efficiency (constrained between 0 and 1)
+and $\theta$ is the probability of zero catch from a Bernoulli sampling processes
+(``zero-inflation rate'').
 The likelihood implies that the station-level abundance follows a zero-inflated 
 Poisson distribution with a rate parameter equal to the lake-wide mean population density 
 scaled by the sampling efficiency for the corresponding age class.
 We assumed that the lake-wide population was well-mixed across years,
-and while we did not attempt to account for systematic differences between stations,
+which is supported by a mark-recapture study showing that individuals tagged
+at spawning grounds were recovered in all parts of the lake \citep{gudbergsson1991}.
+Moreover, while we did not attempt to account for systematic differences between stations,
 no such differences were consistently apparent from visual inspection of the data 
-(Figure  \ref{fig:p_sites}).
+(Supporting Information: Figure S2).
 Estimating a separate sampling efficiency for each age class allowed the model to account
 for systematic differences in sampling efficiency as a function of age.
 Such differences were visually apparent in the data, 
 as far too few first-year individuals were captured 
 to account for the abundance of subsequent ages assuming a closed population
-(Figure  \ref{fig:p_cohort}). 
-We originally fit the model with a Poisson likelihood without zero inflation.
-However, comparison of the posterior predictive distribution (see below)
-to the observed data made clear that zeros were overrepresented in the data
-relative to the model fit.
-The inferences from the Poisson and zero-inflated Poisson models were extremely similar,
-so we only present results from the latter.
+(Supporting Information: Figure S1). 
 Note that zero-inflation is independent of age-specific variation in sampling efficiency
-and is best understood as the consequence of processes unrelated to sampling efficiency.
+and is best understood as the consequence of processes unrelated 
+to age- or size-specific sampling efficiency.
 
+During model fitting, we divided $x_{i,t}$ by 100 
+to improve computational efficiency by avoiding excessively largely values;
+we then backscaled the estimates for $x_{i,t}$ in reporting the results.
 We used exponential priors with rate 1/50 for the initial scaled population densities for
 each age class, 
 Gaussian priors with mean 0 and SD of either 5 or 1 for 
@@ -388,9 +415,9 @@ initial log-recruitment or logit-survival (respectively),
 Gamma priors with shape and scale both set to 1.5 for the random walk SDs,
 and Beta priors with shape parameters both set to 2 for the sampling efficiency
 and zero-inflation rate.
-The overall scales of these priors were weakly-informative relative to the 
+The overall scales of these priors were weakly informative relative to the 
 scales of the corresponding parameters.
-The Gamma priors were unimodal, concave-down near zero, and had zero-density at zero,
+The Gamma priors were unimodal, concave-down near zero, and had zero density at zero,
 allowing the resulting posteriors to be arbitrarily close to zero 
 while not being drawn towards zero by the prior.
 The Beta priors were unimodal and concave-down, with a mode at 0.5.
@@ -409,7 +436,7 @@ because we were primarily interested in the effects
 of the underlying demographic rates per se; 
 the realized growth rate would also have included transient fluctuations due to
 non-equilibrium age structure \citep{caswell2001matrix}.
-For all GLS models, the response variables and year were z-scored 
+For all GLS models, the response variables and year were z-transformed
 (subtracted mean and divided by SD) so that coefficients
 could be interpreted as effects sizes;
 fitted values were then back-scaled for the figures.
@@ -431,8 +458,10 @@ regarding temporal variation in the demographic rates,
 we compared the fit of the full model to a reduced model with the demographic
 rates fixed through time.
 We used Stan via the \texttt{rstan} package \citep{stan2020rstan},
-performed GLS with the \texttt{gls} function from the \texttt{nlme} package \citep{pinheiro2020nlme}, 
-and calculated the asymptotic growth rate with the \texttt{demogR} package \citep{holland2007demogR}.
+performed GLS with the \texttt{gls} function 
+from the \texttt{nlme} package \citep{pinheiro2020nlme}, 
+and calculated the asymptotic growth rate with 
+the \texttt{demogR} package \citep{holland2007demogR}.
 All analysis were conducted in R 4.0.3 \citep{r2020}. 
 
 
@@ -450,16 +479,15 @@ All analysis were conducted in R 4.0.3 \citep{r2020}.
 % ---------------------------------------------------------------------------------------
 
 The full model provided a good visual fit to the station-level 
-catch data (Figure \ref{fig:p_catch}),
-with most of the temporal variation in lake-wide catch being well-characterized by the model.
-The 90\% prediction intervals provided reasonable coverage relative to the observed data,
-although the observations were zero-inflated in some years.
-While in principle it would be possible to account for such zero inflation in the model,
-it is unlikely that this would substantively alter the model inference.
+catch data (Figure \ref{fig:p_catch}a),
+with most of the temporal variation in lake-wide catch being well characterized by the model.
+Moreover, 
+the 90\% prediction intervals provided reasonable coverage relative to the observed data.
 In contrast to the full model,
-the reduced model provided a poor fit to the data (Figure \ref{fig:p_catch_reduced}),
+the reduced model without time-varying parameters
+provided a poor fit to the data (Figure \ref{fig:p_catch}b),
 displaying damped oscillations that did not reflect the observed dynamics
-(Figure \ref{fig:p_dens_reduced}).
+(Supporting Information: Figure S3).
 This was corroborated by the median posterior log-likelihood calculated
 from equation \ref{eq:likelihood},
 which was much higher for the full model (-4065) than for the reduced (-6075).
@@ -479,21 +507,13 @@ This variation was underpinned by substantial variation in survival
 and recruitment (Figure \ref{fig:p_rec}),
 both of which had random walk SDs 
 with posterior densities concentrated away from zero (Table \ref{tab:param}).
-The SD for survival was larger than for recruitment,
-especially when the SDs were judged against the scales of their corresponding 
-demographic processes. 
-This indicates that survival was generally more variable than recruitment,
-a fact that was visually apparent from their respective time series,
-especially for age 1 and age 3 survival
-(Figures \ref{fig:p_surv} and \ref{fig:p_rec}).
-
 The survival probabilities for all age classes increased through time,
 although only the trend for age 4+ was statistically unambiguous 
 (Figure \ref{fig:p_surv}; Table \ref{tab:gls}).
 Elevated age 4+ survival was associated with a steady increase in the survey catch of
 age 4+ individuals from 2005 onward (Figure \ref{fig:p_catch}). 
 In contrast, per capita recruitment declined over most of the time series, 
-consistent with declining age 1 survey catch,
+consistent with declining age 1 survey catch
 (Figure \ref{fig:p_rec}; Table \ref{tab:gls}).
 However, per capita recruitment increased in the most recent three years,
 again corresponding with the  age 1 survey catch.
@@ -508,7 +528,8 @@ The AR coefficients were moderately positive for most of the demographic paramet
 except for age 2 survival and the population growth rate 
 for which the AR coefficients were somewhat negative.
 These negative coefficients potentially indicate overcompensatory dynamics,
-although this inference is tentative given their low magnitudes 
+in which high values in one year predict low values in the next.
+Nonetheless, this inference is tentative given their low magnitudes 
 and absence of uncertainty estimates.
 Overall, the GLS results show that while the size of the Arctic charr population 
 was variable over the study period, 
@@ -527,7 +548,7 @@ it did not undergo meaningful directional change.
 
 \section*{Discussion}
 
-In this study 
+In this study, 
 we used data from a multidecadal survey of Arctic charr in Lake M\'{y}vatn
 to quantify demographic changes and potential recovery of the population
 following its collapse.
@@ -536,7 +557,8 @@ with only adults showing an unambiguous positive trend over the course of the st
 In contrast, per capita recruitment declined substantially and experienced comparatively little
 variation around this trend until an increase over the most recent three years.
 The countervailing changes in  per capita recruitment and adult survival resulted 
-in limited directional change in the total population size or population growth rate,
+essentially no directional change in overall population size 
+and only a very limited increase in the population growth rate,
 despite the rising number of adults.
 Rather, the dynamics of  M\'{y}vatn's charr population 
 were dominated by large interannual variability
@@ -551,7 +573,7 @@ until the population's recovery has been more clearly established.
 
 A crucial step for projecting the future dynamics of M\'{y}vatn’s charr population 
 is identifying the underlying causes for the decline in per capita recruitment.
-Food web interactions have been identified as an important source 
+Food-web interactions have been identified as an important source 
 of fluctuations in other charr populations 
 \citep{snorrason1992population, amundsen1994piscivory, jonsson2015freshwater}.
 M\'{y}vatn is characterized by dramatic fluctuations in the abundance 
@@ -559,24 +581,24 @@ of primary food sources for juvenile charr, particularly benthic crustaceans
 and midges 
 \citep{einarsson2004clad, gardarsson2004population, gudbergsson2004}.
 Furthermore, there is substantial spatial heterogeneity in the abundance 
-of these aquatic invertebrates \citep{bartrons2015spatial} 
+of these aquatic invertebrates \citep{bartrons2015spatial}, 
 which might disproportionately inhibit young juveniles 
 that have more restricted mobility than the larger age classes. 
 The large fluctuations in aquatic invertebrates are associated 
 with fluctuations in populations of other consumer species in addition to charr, 
-including sticklebacks and brown trout that could serve 
+including threespine stickleback and brown trout that could serve 
 as competitors with young charr, and piscivorous waterfowl that could serve as predators 
 \citep{einarsson2004myvatn}. 
 In addition to biotic factors, 
 temperature has received much attention as a driver of charr populations 
-\citep{winfield2008arctic, elliott2010temperature, jonsson2015freshwater},
+\citep{winfield2008arctic, elliott2010temperature, gerdeaux2011does, jonsson2015freshwater},
 given their distribution restricted to arctic
-and cold-temperature lakes \citep{klemetsen2003atlantic}
+and cold-temperature lakes \citep{klemetsen2003atlantic},
 and the ubiquity anthropogenic climate change. 
 While climate warming has not yet become an obvious ecological driver at M\'{y}vatn, 
 it is nonetheless possible that temperature changes have adversely affected recruitment 
-in M\'{y}vatn’s charr population as has been seen in other Icelandic lakes 
-\citep{malmquist2009salmonid}. 
+in M\'{y}vatn’s charr population as has been seen in other lakes in Iceland and Scandanavia
+\citep{malmquist2009salmonid, svenning2021temporal}
 
 This study provides a demographic assessment of a population of Arctic charr in a single lake,
 but it reinforces themes that have broad and increasing interest in applied ecology.
@@ -631,8 +653,13 @@ with substantial contributions from all authors to subsequent drafts.
 We thank \'{A}rni Einarsson, Camille Leblanc, and Bjarni Krist\'{o}fer Kristj\'{a}nsson
 for their constructive feedback on the manuscript.
 
-\bibliographystyle{ecology.bst}
+\section*{Data and code availability}
+
+Data and code will be made available on FigShare upon acceptance.
+
 \clearpage
+
+\bibliographystyle{ecology.bst}
 
 \bibliography{refs.bib}
 
@@ -676,7 +703,7 @@ Coefficients and standard errors (SE) from the GLS models
 quantifying linear trends in the demographic rates through time.
 The models were fit on either a log (recruitment; population growth rate)
 or logit (survival probability) scale,
-and all response and predictor variables were z-scored prior to model fitting.
+and all response and predictor variables were z-transformed prior to model fitting.
 Therefore, the coefficients can be compared as effect sizes 
 across all of the response variables.
 The autoregressive (AR) coefficients were included to account for temporal autocorrelation
@@ -711,12 +738,17 @@ population growth rate  &        & -0.02  \pm~0.13           & ~0.18 \pm~0.13   
 \includegraphics{../analysis/figures/p_catch.pdf}
 \caption{\label{fig:p_catch}
 Station-level catch (points) and 90\% posterior prediction intervals (shading) 
-from the demographic model.
-The prediction intervals include stochasticity arising from the Poisson sampling process
-and therefore represent the predicted distribution of catch according to the model. 
-The solid lines are medians of the prediction distributions and quantify the expected
-catch; note that this is not the same quantity as the estimated population density, 
-shown in Figure \ref{fig:p_dens}.
+from (a) the full model including temporal variation in survival and recruitment
+and (b) the reduced model with survival and recruitment fixed through time.
+The prediction intervals include stochasticity arising from the 
+zero-inflated Poisson sampling process
+and therefore represent the predicted distribution of 
+station-level catch according to the model. 
+The solid lines are medians of the posterior prediction distributions 
+and quantify the expected catch; 
+note that this is not the same quantity as the estimated population density, 
+shown in Figure \ref{fig:p_dens} and Supporting Information: Figure S3
+for the full and reduced models, respectively.
 The y-axis is on a log+1 scale to accommodate zeros.
 }
 \end{figure}
@@ -751,9 +783,9 @@ matching the nominal coverage of standard errors.
 The dashed horizontal line indicates a growth rate of 1,
 which corresponds to no change in the population size from one time step to the next.
 The solid black line represents the fitted values from the GLS model
-fit on a log-scale and then back-transformed 
+fit on a log scale and then back-transformed 
 to match the scale of the population growth rate.
-Note however, that the y-axis is on a log scale, 
+Note, however, that the y-axis is on a log scale, 
 thereby preserving the linearity of the data and model fit.
 }
 \end{figure}
@@ -792,82 +824,6 @@ matching the nominal coverage of standard errors.
 The solid black line represents the fitted values from the GLS models.
 Note that log-recruitment $\text{capita}^{-1}$ ranging from -1 to 8 
 corresponds to actual log-recruitment $\text{capita}^{-1}$ ranging from 0.4 to 3000.
-}
-\end{figure}
-\clearpage
-% ---------------------------------------------------------------------------------------
-
-
-
-
-
-
-% ---------------------------------------------------------------------------------------
-% ---------------------------------------------------------------------------------------
-% Supplemental figures
-% ---------------------------------------------------------------------------------------
-% ---------------------------------------------------------------------------------------
-
-\renewcommand{\thefigure}{S\arabic{figure}}
-\renewcommand{\theequation}{S\arabic{equation}}
-\renewcommand{\thetable}{S\arabic{table}}
-\setcounter{equation}{0}
-\setcounter{figure}{0}
-\setcounter{table}{0}
-
-% ---------------------------------------------------------------------------------------
-\begin{figure}
-\centering
-\includegraphics{../analysis/figures/p_cohort.pdf}
-\caption{\label{fig:p_cohort}
-Survey catch as a function of age, with each line corresponding to a unique cohort.
-}
-\end{figure}
-\clearpage
-% ---------------------------------------------------------------------------------------
-
-% ---------------------------------------------------------------------------------------
-\begin{figure}
-\centering
-\includegraphics{../analysis/figures/p_sites.pdf}
-\caption{\label{fig:p_sites}
-Station-level catch through time, with stations shown in different colors.
-}
-\end{figure}
-\clearpage
-% ---------------------------------------------------------------------------------------
-
-% ---------------------------------------------------------------------------------------
-\begin{figure}
-\centering
-\includegraphics{../analysis/figures/p_catch_reduced.pdf}
-\caption{\label{fig:p_catch_reduced}
-Station-level catch (points) and 90\% posterior prediction intervals (shading) 
-from the reduced version of the demographic model 
-with survival and recruitment fixed through time.
-The prediction intervals include stochasticity arising from the Poisson sampling process,
-and therefore represent the predicted distribution of catch according to the model. 
-The solid lines are medians of the prediction distributions and quantify the expected
-catch; note that this is not the same quantity as the estimated population density, 
-shown in Figure \ref{fig:p_dens_reduced}.
-The y-axis is on a log+1 scale to accommodate zeros.
-}
-\end{figure}
-\clearpage
-% ---------------------------------------------------------------------------------------
-
-% ---------------------------------------------------------------------------------------
-\clearpage
-\begin{figure}
-\centering
-\includegraphics{../analysis/figures/p_dens_reduced.pdf}
-\caption{\label{fig:p_dens_reduced}
-Average population density across stations (solid line)
-inferred from the reduced version of the demographic model 
-with survival and recruitment fixed through time.
-Shading depicts 68\% uncertainty intervals, 
-matching the nominal coverage of standard errors.
-The y-axis is on a log scale.
 }
 \end{figure}
 \clearpage
