Minor edits keywords and acknowledgmenets.

--- a/manuscript/charr_ms.tex
+++ b/manuscript/charr_ms.tex
@@ -70,7 +70,8 @@ University of Wisconsin, Madison, Wisconsin, USA
 
 Running head: {Arctic charr demography}
 
-\textit{Keywords}: {demography; 
+\textit{Keywords}: {age structure;
+                    demography; 
                     Lake M\'{y}vatn; 
                     population dynamics; 
                     \emph{Salvelinus alpinus}}
@@ -645,7 +646,8 @@ the Icelandic Marine and Freshwater Research Institute
 and the M\'{y}vatn Research Station. 
 Further support came from NSF LTREB DEB-1556208 to ARI and 
 NSF Graduate Research Fellowship (DGE-1256259) supporting JSP.
-GG conducted the surveys of M\'{y}vatn’s Arctic charr population. 
+GG conducted the surveys of M\'{y}vatn’s Arctic charr population,
+with contributions from staff of the Marine and Freshwater Research Institute. 
 JSP conducted the analyses, 
 with input from ARI. 
 JSP wrote the first draft of the paper, 
